--- a/gdip/core/CMakeLists.txt
+++ b/gdip/core/CMakeLists.txt
@@ -13,16 +13,23 @@ set(SOURCE_FILES ${DUBINS_SRC}
         src/opendubins/dip.cpp
         src/opendubins/gdip.cpp
         src/opendubins/line.cpp
-        src/opendubins/path.cpp
         src/opendubins/state.cpp
         src/opendubins/dubinspath.cpp
         src/opendubins/angleinterval.cpp
+        src/opendubins/dubins3D.cpp
+        src/opendubins/dubinsmaneuver3D.cpp
+        src/opendubins/state3D.cpp
 
         src/opendubins/stateatdistance.h
         src/opendubins/vector.h
         src/opendubins/point.h
         src/opendubins/dmath.h
-        src/opendubins/dtype.h)
+        src/opendubins/dtype.h
+        src/opendubins/dubins3D.h
+        src/opendubins/point3d.h
+        src/opendubins/state3D.h
+        src/opendubins/vector3D.h
+        )
 
 add_library(opendubins_core STATIC ${SOURCE_FILES})
 
