--- a/gdip/examples/CMakeLists.txt
+++ b/gdip/examples/CMakeLists.txt
@@ -1,5 +1,7 @@
 include_directories("../core/src")
 
+set(CMAKE_BUILD_TYPE Debug)
+
 add_executable(hellodubins src/hellodubins.cpp ${SOURCE_FILES} )
 target_link_libraries(hellodubins opendubins_core)
 
@@ -9,3 +11,8 @@ add_executable(gdipexample src/gdipexample.cpp ${SOURCE_FILES} )
 target_link_libraries(gdipexample opendubins_core)
 
 install(TARGETS gdipexample DESTINATION bin)
+
+add_executable(hellodubins3D src/hellodubins3D.cpp ${SOURCE_FILES} )
+target_link_libraries(hellodubins3D opendubins_core)
+
+install(TARGETS hellodubins3D DESTINATION bin)
